# url-to-md-cli

./: .gitignore  .mcp.json  CLAUDE.md  pyproject.toml  run_kb_for_prompt.py  test_kb_for_prompt_with_litellm.py  url_to_md.py
.claude/commands/: complete-feature.md  complete-github-issue.md  complete-task.md  context-prime.md  create-documentation-toc.md  establish-persona.md  next-task.md
kb_for_prompt/: README.md  __init__.py
kb_for_prompt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kb_for_prompt/atoms/: __init__.py  error_utils.py  input_validator.py  path_utils.py  type_detector.py
kb_for_prompt/molecules/: __init__.py  doc_converter.py  pdf_converter.py  url_converter.py
kb_for_prompt/organisms/: __init__.py  batch_converter.py  condenser.py  llm_client.py  llm_generator.py  menu_system.py  single_item_converter.py
kb_for_prompt/pages/: __init__.py  kb_for_prompt.py
kb_for_prompt/templates/: __init__.py  banner.py  errors.py  kb_extraction_prompt.md  progress.py  prompts.py  summary.py
kb_for_prompt/tests/: __init__.py  test_batch_converter.py  test_condenser.py  test_doc_converter.py  test_error_utils.py  test_input_validator.py  test_kb_for_prompt.py  test_kb_for_prompt_integration.py  test_litellm_client.py  test_llm_generator.py  test_menu_system.py  test_menu_system_integration.py  test_path_utils.py  test_pdf_converter.py  test_project_structure.py  test_prompts.py  test_single_item_converter.py  test_type_detector.py  test_url_converter.py
test_output/: test-kb.md  test.md
